Deal Hunt commit first

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BRIGHT_DATA_USERNAME=brd-customer-hl_703755fa-zone-web_unlocker1
-BRIGHT_DATA_PASSWORD=3yukx0z3d9uw 
-MONGO_DB_URI=mongodb+srv://Ak8417:Ak7985@authdb.g8srf.mongodb.net/?retryWrites=true&w=majority&appName=AuthDB
+BRIGHT_DATA_PASSWORD=3yukx0z3d9uw
+MONGO_DB_URI=mongodb+srv://Adarshk6600:Ak8417@databaseak.38otn9o.mongodb.net
